mengubah jenis font dan menambahkan beberapa penyesuaian

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="shortcut icon" href="assets/img/automaton.png" type="image/x-icon">
         
         <!--=============== REMIX ICONS ===============-->
+        <script src="https://kit.fontawesome.com/523d811539.js" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
         <!--=============== CSS ===============-->
@@ -44,19 +45,23 @@
 
                     <ul class="profile__social">
                         <a href="https://www.instagram.com/muhampedia" target="_blank" class="profile__social-link">
-                            <i class="ri-instagram-line"></i>
+                            <i class="fa-brands fa-instagram"></i>
                         </a>
 
                         <a href="https://github.com/muhammedia" target="_blank" class="profile__social-link">
-                            <i class="ri-github-line"></i>
+                            <i class="fa-brands fa-github"></i>
                         </a>
 
                         <a href="https://youtube.com/muhammadmaghribi" target="_blank" class="profile__social-link">
-                            <i class="ri-youtube-line"></i>
+                            <i class="fa-brands fa-youtube"></i>
                         </a>
 
-                        <a href="https://discord.gg/V2tWmm3DQC" target="_blank" class="profile__social-link">
-                            <i class="ri-discord-line"></i>
+                        <a href="https://discord.com/users/977156734579798016" target="_blank" class="profile__social-link">
+                            <i class="fa-brands fa-discord"></i>
+                        </a>
+
+                        <a href="https://tiktok.com/@muhampedia" target="_blank" class="profile__social-link">
+                            <i class="fa-brands fa-tiktok"></i>
                         </a>
                     </ul>
                 </div>
@@ -83,17 +88,21 @@
                 <div class="profile__buttons">
                     <!-- Insert your CV -->
                     <a download="" href="assets/pdf/MuhammadMaghribi.pdf" class="button">
-                        Unduh CV <i class="ri-download-line"></i>
+                        Unduh CV <i class="fa-solid fa-cloud-arrow-down"></i>
                     </a>
 
                     <div class="profile__buttons-small">
                         <!-- Insert a real number plus country code -->
                         <a href="https://api.whatsapp.com/send?phone=6285157355910&text=Halo Muhammad Maghribi! Saya Ingin Bekerja Sama Dengan Anda." target="_blank" class="button button__small button__gray">
-                            <i class="ri-whatsapp-line"></i>
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </a>
+                        <!-- Insert your profile -->
+                        <a href="" target="_blank" class="button button__small button__gray">
+                            <i class="fa-solid fa-envelope"></i>
                         </a>
                         <!-- Insert your brand name or profile -->
                         <a href="https://m.me/muhampedia" target="_blank" class="button button__small button__gray">
-                            <i class="ri-messenger-line"></i>
+                            <i class="fa-brands fa-facebook-messenger"></i>
                         </a>
                     </div>
                 </div>
@@ -125,7 +134,7 @@
                                     <span class="projects__subtitle">Komunitas</span>
                                     <h3 class="projects__title">Custom Station</h3>
                                     <a href="https://customstation.site/" target="_blank" class="projects__button button button__small">
-                                        <i class="ri-link"></i>
+                                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                     </a>
                                 </div>
                             </div>
@@ -139,7 +148,7 @@
                                     <span class="projects__subtitle">Web</span>
                                     <h3 class="projects__title">Portfolio website</h3>
                                     <a href="#" class="projects__button button button__small">
-                                        <i class="ri-link"></i>
+                                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                     </a>
                                 </div>
                             </div>
