--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <i class="fa-brands fa-whatsapp"></i>
                         </a>
                         <!-- Insert your profile -->
-                        <a href="" target="_blank" class="button button__small button__gray">
+                        <a href="mailto:muhampedia.id@gmail.com" target="_blank" class="button button__small button__gray">
                             <i class="fa-solid fa-envelope"></i>
                         </a>
                         <!-- Insert your brand name or profile -->
